--- a/src/main/resources/webroot/static/html/login.html
+++ b/src/main/resources/webroot/static/html/login.html
@@ -2,26 +2,26 @@
 <head>
     <meta charset="utf-8">
     <base href="<%=basePath%>">
-    <title>后台管理模板系统登录入口</title>
+    <title>后台管理系统登录入口</title>
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <link rel="stylesheet" href="/plugins/layui/css/layui.css">
     <link rel="stylesheet" href="/css/login.css">
+    <link rel="stylesheet" href="/css/common.css">
 </head>
 <body class="layui-layout-body">
 <div class="login-container">
     <div class="login display-show">
         <div class="login-main">
             <div class="login-box login-header">
-                <h2>kpf体育</h2>
-                <p>后台管理系统登录</p>
+                <p>系统登录</p>
             </div>
             <div class="login-box layui-form">
                 <div class="layui-form-item">
                     <div class="layui-row">
                         <div class="layui-col-xs12">
                             <label class="login-icon layui-icon layui-icon-username" for="username"></label>
-                            <input type="text" name="username" id="username" lay-verify="required" placeholder="用户名"
+                            <input lay-bg="transparent" type="text" name="username" id="username" lay-verify="required" placeholder="用户名"
                                    class="layui-input login-icon-left">
                         </div>
                     </div>
@@ -30,7 +30,7 @@
                     <div class="layui-row">
                         <div class="layui-col-xs12">
                             <label class="login-icon layui-icon layui-icon-password" for="password"></label>
-                            <input type="password" name="password" id="password" lay-verify="required" placeholder="密码"
+                            <input lay-bg="transparent" type="password" name="password" id="password" lay-verify="required" placeholder="密码"
                                    class="layui-input login-icon-left">
                         </div>
                     </div>
@@ -39,13 +39,12 @@
                     <div class="layui-row">
                         <div class="layui-col-xs7">
                             <label class="login-icon layui-icon layui-icon-vercode" for="vercode"></label>
-                            <input type="text" name="vercode" id="vercode" lay-verify="required" placeholder="图形验证码"
+                            <input lay-bg="transparent" type="text" name="vercode" id="vercode" lay-verify="required" placeholder="图形验证码"
                                    class="layui-input login-icon-left">
                         </div>
                         <div class="layui-col-xs5">
                             <div style="margin-left: 10px;">
-                                <img src="https://www.oschina.net/action/user/captcha" class="login-vercode"
-                                     id="get-vercode">
+                                <img src="https://www.oschina.net/action/user/captcha" class="login-vercode" id="get-vercode">
                             </div>
                         </div>
                     </div>
@@ -55,11 +54,10 @@
                     <a href="javascript:;" class="right login-right-a" style="margin-top: 7px;">忘记密码？</a>
                 </div>
                 <div class="layui-form-item ">
-                    <button class="layui-btn layui-btn-fluid" lay-submit="" lay-filter="LAY-user-login-submit">登 入
-                    </button>
+                    <button lay-bg="transparent" class="layui-btn layui-btn-fluid" lay-submit="" lay-filter="LAY-user-login-submit">登 入</button>
                 </div>
                 <div class="layui-form-item login-other">
-                    <label>社交账号登入</label>
+                    <label class="c-green">社交账号登入</label>
                     <a href="javascript:;"><i class="layui-icon layui-icon-login-qq"></i></a>
                     <a href="javascript:;"><i class="layui-icon layui-icon-login-wechat"></i></a>
                     <a href="javascript:;"><i class="layui-icon layui-icon-login-weibo"></i></a>
