--- a/src/main/resources/webroot/static/html/login.html
+++ b/src/main/resources/webroot/static/html/login.html
@@ -63,6 +63,15 @@
                     <a href="javascript:;"><i class="layui-icon layui-icon-login-weibo"></i></a>
                     <a href="javascript:;" class="right login-right-a">注册帐号</a>
                 </div>
+                <div class="layui-form-item">
+                    <div class="layui-inline">
+                        <label class="layui-form-label">关键字</label>
+                        <div class="layui-input-inline">
+                            <input type="text"  autocomplete="off" class="layui-input">
+                            <i class="search-icon layui-icon layui-icon-search"></i>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
